<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.healtycontrol.view.ConsultaRegistrosActitvity">

    <Button
        android:id="@+id/btnConsultaPeso"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/design_default_color_secondary_variant"
        android:drawableTop="@drawable/ic_peso"
        android:drawableTint="@color/fuente_blanca"
        android:fontFamily="@font/ubuntu_bold"

        android:onClick="goToMostrarPeso"
        android:paddingTop="30dp"
        android:text="@string/peso"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbConsulta"
        app:layout_constraintVertical_bias="0.292" />

    <Button
        android:id="@+id/btnConsultaPresionArterial"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="32dp"
        android:backgroundTint="@color/design_default_color_secondary_variant"
        android:drawableTop="@drawable/ic_presion"
        android:drawableTint="@color/fuente_blanca"
        android:fontFamily="@font/ubuntu_bold"
        android:onClick="goToMostrarPresionArterial"
        android:paddingTop="30dp"
        android:text="@string/presion_arterial"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.855"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConsultaTemperatura"
        app:layout_constraintVertical_bias="0.142" />

    <Button
        android:id="@+id/btnConsultaGlucometria"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/design_default_color_secondary_variant"
        android:drawableTop="@drawable/ic_glucometria"
        android:drawableTint="@color/fuente_blanca"
        android:fontFamily="@font/ubuntu_bold"
        android:onClick="goToMostrarGlucometrias"
        android:paddingTop="30dp"
        android:text="@string/glucometria"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConsultaPeso"
        app:layout_constraintVertical_bias="0.142" />

    <Button
        android:id="@+id/btnConsultaTemperatura"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:backgroundTint="@color/design_default_color_secondary_variant"
        android:drawableTop="@drawable/ic_temperatura_2"
        android:drawableTint="@color/fuente_blanca"
        android:fontFamily="@font/ubuntu_bold"
        android:onClick="goToMostrarTemperatura"
        android:paddingTop="30dp"
        android:text="@string/temperatura"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.873"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbConsulta"
        app:layout_constraintVertical_bias="0.292" />

    <TextView
        android:id="@+id/lbConsulta"
        android:layout_width="325dp"
        android:layout_height="92dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/historial"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.101" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="256dp"
        android:layout_height="53dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/ubuntu_light"
        android:text="@string/mensaje_historial"
        android:textAlignment="center"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbConsulta"
        app:layout_constraintVertical_bias="0.055" />

</androidx.constraintlayout.widget.ConstraintLayout>