<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.healthycontrol.view.PresionActivity">

    <EditText
        android:id="@+id/txtValorPresionBaja"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/presion_baja"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPresionAlta"
        app:layout_constraintVertical_bias="0.104" />

    <EditText
        android:id="@+id/txtPresionAlta"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="360dp"
        android:ems="10"
        android:hint="@string/presion_alta"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFechaPresion"
        app:layout_constraintVertical_bias="0.956" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="40dp"
        android:background="@color/colorGuardar"
        android:drawableTop="@drawable/ic_save_40"
        android:drawableTint="@color/fuente_blanca"
        android:fontFamily="@font/ubuntu_bold"
        android:onClick="goToHome"
        android:text="@string/guardar"
        android:textAllCaps="false"
        android:paddingTop="15dp"
        android:textColor="@color/fuente_blanca"

        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtValorPresionBaja"
        app:layout_constraintVertical_bias="0.533"
        tools:ignore="OnClick" />

    <TextView
        android:id="@+id/lbRegistoPresion"
        android:layout_width="325dp"
        android:layout_height="92dp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/registro_presion"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.104" />

    <TextView
        android:id="@+id/textViewFechaPresion"
        android:layout_width="360dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="452dp"
        android:fontFamily="@font/roboto"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbRegistoPresion"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>